Bug 366303 - color picker sample radius setting has no effect
Summary: color picker sample radius setting has no effect
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 3.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-07-31 14:08 UTC by jdreske
Modified: 2016-11-04 08:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jdreske 2016-07-31 14:08:13 UTC
I tried to increase the sample radius of the color picker to get a mixed color when I cmd-click (mac) on a sharp border between two colors. 
It seems the sample radius setting does not increase no matter if set to 20px, 200px, 900px, not for the color picker tool nor the cmd - shortcut. The transition between the original colors stays very narrow.

Reproducible: Always
Comment 1 Halla Rempt 2016-08-12 11:25:56 UTC
Hi,

Thanks for your report. I think I can confirm the issue.
Comment 2 Dmitry Kazakov 2016-11-04 08:23:57 UTC
Git commit 344da7e8112eda88189ccfb08fbbc392383a79d4 by Dmitry Kazakov.
Committed on 04/11/2016 at 08:22.
Pushed by dkazakov into branch 'rempt/impex-refactoring'.

Fix color picker radius for the Color Pick Tool

This patch introduces a separate method for KoMixColorsOp
that can work without any weights, just uniformly averaging the data.
Ref T4224

M  +20   -0    libs/pigment/KoMixColorsOp.h
M  +65   -9    libs/pigment/KoMixColorsOpImpl.h
M  +40   -0    libs/pigment/tests/KoRgbU8ColorSpaceTester.cpp
M  +1    -0    libs/pigment/tests/KoRgbU8ColorSpaceTester.h
M  +1    -7    plugins/tools/basictools/kis_tool_colorpicker.cc

http://commits.kde.org/krita/344da7e8112eda88189ccfb08fbbc392383a79d4
Comment 3 Dmitry Kazakov 2016-11-04 08:23:57 UTC
Git commit b73f972efb582f8077ca66e5f3a8ea193c17d42b by Dmitry Kazakov.
Committed on 04/11/2016 at 08:22.
Pushed by dkazakov into branch 'rempt/impex-refactoring'.

Implement sample radius for Ctrl+click color picker

* select sample radius in the Color Picker tool
* use this radius everywhere, even in the Ctrl+click mode
Ref T4224

M  +82   -3    libs/ui/tool/kis_tool_utils.cpp
M  +17   -1    libs/ui/tool/kis_tool_utils.h
M  +9    -5    libs/ui/tool/strokes/kis_color_picker_stroke_strategy.cpp
M  +1    -1    libs/ui/tool/strokes/kis_color_picker_stroke_strategy.h
M  +26   -80   plugins/tools/basictools/kis_tool_colorpicker.cc
M  +6    -1    plugins/tools/basictools/kis_tool_colorpicker.h

http://commits.kde.org/krita/b73f972efb582f8077ca66e5f3a8ea193c17d42b
Comment 4 Dmitry Kazakov 2016-11-04 08:24:45 UTC
Git commit 7577db81e88719de2649cc231c2ffdef15a5237e by Dmitry Kazakov.
Committed on 04/11/2016 at 08:24.
Pushed by dkazakov into branch 'krita/3.1'.

Implement sample radius for Ctrl+click color picker

* select sample radius in the Color Picker tool
* use this radius everywhere, even in the Ctrl+click mode
Ref T4224

M  +82   -3    libs/ui/tool/kis_tool_utils.cpp
M  +17   -1    libs/ui/tool/kis_tool_utils.h
M  +9    -5    libs/ui/tool/strokes/kis_color_picker_stroke_strategy.cpp
M  +1    -1    libs/ui/tool/strokes/kis_color_picker_stroke_strategy.h
M  +26   -80   plugins/tools/basictools/kis_tool_colorpicker.cc
M  +6    -1    plugins/tools/basictools/kis_tool_colorpicker.h

http://commits.kde.org/krita/7577db81e88719de2649cc231c2ffdef15a5237e
Comment 5 Dmitry Kazakov 2016-11-04 08:24:45 UTC
Git commit 375d2c727f6b0783f7e86cff28a7000649e01f5d by Dmitry Kazakov.
Committed on 04/11/2016 at 08:24.
Pushed by dkazakov into branch 'krita/3.1'.

Fix color picker radius for the Color Pick Tool

This patch introduces a separate method for KoMixColorsOp
that can work without any weights, just uniformly averaging the data.
Ref T4224

M  +20   -0    libs/pigment/KoMixColorsOp.h
M  +65   -9    libs/pigment/KoMixColorsOpImpl.h
M  +40   -0    libs/pigment/tests/KoRgbU8ColorSpaceTester.cpp
M  +1    -0    libs/pigment/tests/KoRgbU8ColorSpaceTester.h
M  +1    -7    plugins/tools/basictools/kis_tool_colorpicker.cc

http://commits.kde.org/krita/375d2c727f6b0783f7e86cff28a7000649e01f5d