Fix color picker radius for the Color Pick Tool

This patch introduces a separate method for KoMixColorsOp
that can work without any weights, just uniformly averaging the data.

BUG:366303
Ref T4224